@@ -1,3 +1,8 @@
+2008-08-06  Aldy Hernandez  <aldyh@redhat.com>
+
+	PR middle-end/35432
+	* gcc.c-torture/compile/pr35432.c: New file.
+
 2008-05-29  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* gcc.dg/nested-func-6.c: New test.
